--- a/Explore-iOS/YelpTableViewCell.xib
+++ b/Explore-iOS/YelpTableViewCell.xib
@@ -4,14 +4,15 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="yelpBusinessCell" id="BRz-CU-k6d" customClass="UITableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="495" height="100"/>
+        <view contentMode="scaleToFill" restorationIdentifier="yelpCell" id="BRz-CU-k6d" customClass="YelpTableViewCell" customModule="Explore_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="382" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Business Name Goes Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7D-sB-uSp">
@@ -23,8 +24,8 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Je-UN-1k9">
                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="100" id="d48-lV-CUa"/>
-                        <constraint firstAttribute="height" constant="100" id="wAv-3W-5rn"/>
+                        <constraint firstAttribute="width" constant="100" id="4Eb-9P-2RA"/>
+                        <constraint firstAttribute="height" constant="100" id="fsy-Jh-RKM"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mau-9D-o0O">
@@ -39,14 +40,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oGm-VG-0is">
-                    <rect key="frame" x="108" y="66" width="197" height="31"/>
+                    <rect key="frame" x="108" y="66" width="177" height="26"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="31" id="Wwk-9U-Egh"/>
-                        <constraint firstAttribute="width" constant="197" id="hlw-HE-QO0"/>
+                        <constraint firstAttribute="width" constant="177" id="GTh-US-zsf"/>
+                        <constraint firstAttribute="height" constant="26" id="aRc-4h-Xxe"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.2 Miles" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhP-RV-R15">
-                    <rect key="frame" x="415" y="71" width="69" height="21"/>
+                    <rect key="frame" x="297" y="69" width="69" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -54,21 +55,30 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="hhP-RV-R15" secondAttribute="trailing" constant="11" id="5OT-uV-re7"/>
-                <constraint firstItem="g7D-sB-uSp" firstAttribute="top" secondItem="BRz-CU-k6d" secondAttribute="top" constant="8" id="APu-hb-vDK"/>
-                <constraint firstItem="1Je-UN-1k9" firstAttribute="top" secondItem="BRz-CU-k6d" secondAttribute="top" id="BgU-su-kY8"/>
-                <constraint firstItem="SDy-jN-Q2v" firstAttribute="top" secondItem="g7D-sB-uSp" secondAttribute="bottom" constant="1" id="BvX-wp-C4c"/>
-                <constraint firstItem="SDy-jN-Q2v" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="Mun-eH-bY8"/>
-                <constraint firstItem="hhP-RV-R15" firstAttribute="centerY" secondItem="oGm-VG-0is" secondAttribute="centerY" id="R0J-3o-EOn"/>
-                <constraint firstItem="oGm-VG-0is" firstAttribute="top" secondItem="mau-9D-o0O" secondAttribute="bottom" constant="-2" id="TMT-YA-mKy"/>
-                <constraint firstItem="g7D-sB-uSp" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="XHK-R7-Lt5"/>
-                <constraint firstItem="mau-9D-o0O" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="a4r-es-aXO"/>
-                <constraint firstItem="mau-9D-o0O" firstAttribute="top" secondItem="SDy-jN-Q2v" secondAttribute="bottom" constant="-3" id="cm3-So-9h2"/>
-                <constraint firstItem="1Je-UN-1k9" firstAttribute="leading" secondItem="BRz-CU-k6d" secondAttribute="leading" id="hUc-Ad-nSZ"/>
-                <constraint firstItem="oGm-VG-0is" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="8" id="kkM-TW-ZHT"/>
+                <constraint firstItem="oGm-VG-0is" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="8" id="Aja-dd-b6g"/>
+                <constraint firstItem="g7D-sB-uSp" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="Hd8-WP-HwC"/>
+                <constraint firstItem="g7D-sB-uSp" firstAttribute="top" secondItem="BRz-CU-k6d" secondAttribute="top" constant="8" id="R3V-r0-uXT"/>
+                <constraint firstItem="mau-9D-o0O" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="T1T-Ui-dBt"/>
+                <constraint firstAttribute="bottom" secondItem="1Je-UN-1k9" secondAttribute="bottom" id="U6t-On-QTK"/>
+                <constraint firstAttribute="bottom" secondItem="hhP-RV-R15" secondAttribute="bottom" constant="10" id="XUJ-ZD-2Zp"/>
+                <constraint firstAttribute="trailing" secondItem="hhP-RV-R15" secondAttribute="trailing" constant="16" id="cui-gD-U7g"/>
+                <constraint firstItem="SDy-jN-Q2v" firstAttribute="leading" secondItem="1Je-UN-1k9" secondAttribute="trailing" constant="12" id="erj-Vt-pmY"/>
+                <constraint firstItem="mau-9D-o0O" firstAttribute="top" secondItem="SDy-jN-Q2v" secondAttribute="bottom" constant="-3" id="f47-sE-Xqd"/>
+                <constraint firstItem="1Je-UN-1k9" firstAttribute="leading" secondItem="BRz-CU-k6d" secondAttribute="leading" id="r9o-T2-Zuu"/>
+                <constraint firstItem="1Je-UN-1k9" firstAttribute="top" secondItem="BRz-CU-k6d" secondAttribute="top" id="uBh-Jk-70b"/>
+                <constraint firstItem="oGm-VG-0is" firstAttribute="centerY" secondItem="hhP-RV-R15" secondAttribute="centerY" constant="-0.5" id="vEH-Bf-vxf"/>
+                <constraint firstItem="SDy-jN-Q2v" firstAttribute="top" secondItem="g7D-sB-uSp" secondAttribute="bottom" constant="1" id="xAs-gF-B9S"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-164.5" y="-15"/>
+            <connections>
+                <outlet property="addressLabel" destination="SDy-jN-Q2v" id="KTx-cg-a1n"/>
+                <outlet property="distanceLabel" destination="hhP-RV-R15" id="J2v-Hb-WZk"/>
+                <outlet property="mainImageView" destination="1Je-UN-1k9" id="0Er-L7-Ltq"/>
+                <outlet property="nameLabel" destination="g7D-sB-uSp" id="SWm-Qp-D3L"/>
+                <outlet property="phoneButton" destination="mau-9D-o0O" id="jZ2-54-EoR"/>
+                <outlet property="ratingImageView" destination="oGm-VG-0is" id="cKp-Wa-ZoO"/>
+            </connections>
+            <point key="canvasLocation" x="-221" y="-15"/>
         </view>
     </objects>
 </document>
