--- a/Explore-iOS/Base.lproj/Main.storyboard
+++ b/Explore-iOS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="aAQ-50-5Np">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,10 +10,41 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
+        <scene sceneID="ru4-29-ea1">
+            <objects>
+                <viewController id="aAQ-50-5Np" customClass="LoginViewController" customModule="Explore_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OgC-hF-pva"/>
+                        <viewControllerLayoutGuide type="bottom" id="1SJ-YM-21p"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CNi-OC-SON">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0QV-pw-e0z" userLabel="Login">
+                                <rect key="frame" x="164" y="318" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="loginButtonPressed:" destination="aAQ-50-5Np" eventType="touchUpInside" id="K70-Ta-nif"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0QV-pw-e0z" firstAttribute="centerY" secondItem="CNi-OC-SON" secondAttribute="centerY" id="uLS-k4-ngJ"/>
+                            <constraint firstItem="0QV-pw-e0z" firstAttribute="centerX" secondItem="CNi-OC-SON" secondAttribute="centerX" id="zYz-gx-3Bv"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KMt-wK-Jln" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-538" y="179"/>
+        </scene>
+        <!--Randomize View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Explore_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="randomizeVC" id="BYZ-38-t0r" customClass="RandomizeViewController" customModule="Explore_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -24,13 +55,13 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FpB-m8-LHy">
                                 <rect key="frame" x="16" y="144" width="343" height="165"/>
-                                <color key="backgroundColor" red="0.41297743059999997" green="0.0" blue="0.41285100829999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.83410154926302915" green="0.71148888272820221" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="165" id="8LN-Ah-7Df"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="45"/>
                                 <state key="normal" title="RANDOMIZE">
-                                    <color key="titleColor" red="0.83370817549999998" green="0.83370817549999998" blue="0.83370817549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.41297743059999997" green="0.0" blue="0.41285100829999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="randomizeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dKh-DD-rjy"/>
@@ -38,13 +69,13 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8x8-cL-0T1">
                                 <rect key="frame" x="16" y="393" width="343" height="165"/>
-                                <color key="backgroundColor" red="0.41297743059999997" green="0.0" blue="0.41285100829999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.83410154930000002" green="0.71148888269999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="165" id="qoY-Rd-dh3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="45"/>
                                 <state key="normal" title="BUCKET LIST">
-                                    <color key="titleColor" red="0.83370817549999998" green="0.83370817549999998" blue="0.83370817549999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="randomizeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eHF-Bz-HsA"/>
@@ -88,12 +119,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="134" y="175"/>
         </scene>
-        <!--Yelp View Controller-->
+        <!--Yelp Table View Controller-->
         <scene sceneID="Ixt-Zn-9sN">
             <objects>
-                <viewController storyboardIdentifier="yelpVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vgP-Dw-fso" customClass="YelpViewController" customModule="Explore_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="yelpTableVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="vgP-Dw-fso" customClass="YelpTableViewController" customModule="Explore_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hwR-i3-mef"/>
                         <viewControllerLayoutGuide type="bottom" id="biV-hT-z5W"/>
@@ -102,46 +133,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" Returned Yelp Businesses" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btm-Az-p6b">
-                                <rect key="frame" x="0.0" y="28" width="375" height="48"/>
-                                <color key="backgroundColor" red="0.41297743055555558" green="0.0" blue="0.41285100833789062" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="xcy-cv-4Qu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
-                                <color key="textColor" red="0.87622316919191923" green="0.87622316919191923" blue="0.87622316919191923" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iBf-7M-zmL">
-                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qa9-gH-i23">
-                                <rect key="frame" x="-3" y="28" width="48" height="48"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="Xg7-Bv-aPj"/>
-                                    <constraint firstAttribute="width" constant="48" id="d3b-vV-Wq3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                <state key="normal" title="&lt;">
-                                    <color key="titleColor" red="0.8337081755050505" green="0.8337081755050505" blue="0.8337081755050505" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="backButtonPressed:" destination="vgP-Dw-fso" eventType="touchUpInside" id="lM4-Li-tmr"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="btm-Az-p6b" firstAttribute="top" secondItem="hwR-i3-mef" secondAttribute="bottom" constant="8" id="3bj-CE-Nbc"/>
-                            <constraint firstItem="btm-Az-p6b" firstAttribute="leading" secondItem="Jkk-EZ-uOZ" secondAttribute="leadingMargin" constant="-16" id="4Mq-da-jLg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="iBf-7M-zmL" secondAttribute="trailing" constant="-16" id="GGy-i6-fCX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="btm-Az-p6b" secondAttribute="trailing" constant="-16" id="Ih0-pf-oha"/>
                             <constraint firstItem="iBf-7M-zmL" firstAttribute="leading" secondItem="Jkk-EZ-uOZ" secondAttribute="leadingMargin" constant="-16" id="LWX-qO-iCU"/>
-                            <constraint firstItem="qa9-gH-i23" firstAttribute="top" secondItem="btm-Az-p6b" secondAttribute="bottom" constant="-48" id="V7G-vo-YZC"/>
-                            <constraint firstItem="iBf-7M-zmL" firstAttribute="top" secondItem="btm-Az-p6b" secondAttribute="bottom" id="ogM-CI-qGX"/>
+                            <constraint firstItem="iBf-7M-zmL" firstAttribute="top" secondItem="Jkk-EZ-uOZ" secondAttribute="top" id="dFQ-NF-RgL"/>
                             <constraint firstItem="biV-hT-z5W" firstAttribute="top" secondItem="iBf-7M-zmL" secondAttribute="bottom" id="rHB-zQ-zse"/>
-                            <constraint firstItem="btm-Az-p6b" firstAttribute="leading" secondItem="qa9-gH-i23" secondAttribute="trailing" constant="-45" id="vcv-le-Ukv"/>
                         </constraints>
                     </view>
                     <connections>
